Fix horizontal scroll behavior

--- a/app/components/footer.css
+++ b/app/components/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 320px;
   background: var(--color-dark-blue);
   color: white;
