--- a/app/components/header.css
+++ b/app/components/header.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 120px;
   background: var(--color-dark-blue);
   color: white;
